move price retrieval to a separate class

--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa23c615030>"
+       "<IPython.lib.display.IFrame at 0x7f051471ffd0>"
       ]
      },
      "metadata": {},
@@ -54,143 +54,6 @@
     "if __name__ == \"__main__\":\n",
     "    app = NormalizedAssetPricesApp()\n",
     "    app.run(host=\"0.0.0.0\", port=8050, debug=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "46e8e6bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Ticker</th>\n",
-       "      <th>AAPL</th>\n",
-       "      <th>GOOGL</th>\n",
-       "      <th>MSFT</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1980-12-12</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-12-15</th>\n",
-       "      <td>0.947829</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-12-16</th>\n",
-       "      <td>0.878261</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-12-17</th>\n",
-       "      <td>0.899998</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-12-18</th>\n",
-       "      <td>0.926092</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-02-14</th>\n",
-       "      <td>1905.756378</td>\n",
-       "      <td>73.767102</td>\n",
-       "      <td>4201.003797</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-02-18</th>\n",
-       "      <td>1904.743469</td>\n",
-       "      <td>73.185666</td>\n",
-       "      <td>4213.449766</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-02-19</th>\n",
-       "      <td>1907.859948</td>\n",
-       "      <td>73.783035</td>\n",
-       "      <td>4266.215337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-02-20</th>\n",
-       "      <td>1915.339666</td>\n",
-       "      <td>73.500278</td>\n",
-       "      <td>4280.204103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-02-21</th>\n",
-       "      <td>1913.158106</td>\n",
-       "      <td>71.548875</td>\n",
-       "      <td>4198.740922</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11139 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Ticker             AAPL      GOOGL         MSFT\n",
-       "Date                                           \n",
-       "1980-12-12     1.000000   1.000000     1.000000\n",
-       "1980-12-15     0.947829   1.000000     1.000000\n",
-       "1980-12-16     0.878261   1.000000     1.000000\n",
-       "1980-12-17     0.899998   1.000000     1.000000\n",
-       "1980-12-18     0.926092   1.000000     1.000000\n",
-       "...                 ...        ...          ...\n",
-       "2025-02-14  1905.756378  73.767102  4201.003797\n",
-       "2025-02-18  1904.743469  73.185666  4213.449766\n",
-       "2025-02-19  1907.859948  73.783035  4266.215337\n",
-       "2025-02-20  1915.339666  73.500278  4280.204103\n",
-       "2025-02-21  1913.158106  71.548875  4198.740922\n",
-       "\n",
-       "[11139 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "app.prices"
    ]
   },
   {
