--- a/app.ipynb
+++ b/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [
@@ -33,19 +33,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f15a79befb0>"
+       "<IPython.lib.display.IFrame at 0x7fb1315c3760>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "Selected tickers: AAPL, GOOGL, MSFT\n"
-     ]
     }
    ],
    "source": [
