--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f7922e0b340>"
+       "<IPython.lib.display.IFrame at 0x7f07ee27dc30>"
       ]
      },
      "metadata": {},
