--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc8c1c425c0>"
+       "<IPython.lib.display.IFrame at 0x7f96b136a6b0>"
       ]
      },
      "metadata": {},
