--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fdcb073a710>"
+       "<IPython.lib.display.IFrame at 0x11b865700>"
       ]
      },
      "metadata": {},
@@ -73,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
