add ticker validation

--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10f60e840>"
+       "<IPython.lib.display.IFrame at 0x119e2b890>"
       ]
      },
      "metadata": {},
