control ticker length

--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x119e2b890>"
+       "<IPython.lib.display.IFrame at 0x127284f80>"
       ]
      },
      "metadata": {},
@@ -47,6 +47,14 @@
     "    app = NormalizedAssetPricesApp()\n",
     "    app.run(host=\"0.0.0.0\", port=8050, debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aa5b425",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
