restrict date range

--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1305831d0>"
+       "<IPython.lib.display.IFrame at 0x1223e6960>"
       ]
      },
      "metadata": {},
