add portfolio hack

--- a/app.ipynb
+++ b/app.ipynb
@@ -33,11 +33,20 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1223e6960>"
+       "<IPython.lib.display.IFrame at 0x1309d5d60>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "interval update: date_range=['2024-04-20 02:11:10.3282', '2025-04-20 02:11:10.3282']\n",
+      "interval update: date_range=['2024-08-27 04:55:08.2384', '2025-08-29 04:55:08.2384']\n",
+      "tickers update: SPLG, IEFA, JCBUX, LGBNX, MWTSX, HGIFX, JPPEX, TROIX, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, QQQ\n"
+     ]
     }
    ],
    "source": [
