--- a/app.ipynb
+++ b/app.ipynb
@@ -33,45 +33,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1213c81a0>"
+       "<IPython.lib.display.IFrame at 0x11d0b7ce0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "interval update: date_range=['2024-10-02 16:16:04.501', '2025-10-14']\n",
-      "interval update: date_range=['2024-09-28 10:22:06.1889', '2025-10-14']\n",
-      "interval update: date_range=['2024-09-18 12:36:10.1273', '2025-10-14']\n",
-      "interval update: date_range=['2024-09-08 14:50:14.0656', '2025-10-14']\n",
-      "interval update: date_range=['2024-08-31 03:02:17.4414', '2025-10-14']\n",
-      "tickers update: SPLG, IEFA, JCBUX, LGBNX, MWTSX, HGIFX, JPPEX, TROIX, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "interval update: date_range=['2024-09-11 01:59:35.8875', '2025-10-14']\n",
-      "tickers update: SPLG, JCBUX, LGBNX, MWTSX, HGIFX, JPPEX, TROIX, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, LGBNX, MWTSX, HGIFX, JPPEX, TROIX, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, MWTSX, HGIFX, JPPEX, TROIX, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, HGIFX, JPPEX, TROIX, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, JPPEX, TROIX, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, TROIX, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, PHYQX, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, CGMXX, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, MEMJX, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, DFSTX, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, PFORX, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, DFISX, MEDHX, VTI\n",
-      "tickers update: SPLG, MEDHX, VTI\n",
-      "tickers update: SPLG, VTI\n",
-      "tickers update: VTI\n",
-      "interval update: date_range=['2025-02-18 17:54:27.2472', '2025-10-14']\n",
-      "interval update: date_range=['2023-10-15', '2025-10-14']\n",
-      "interval update: date_range=['2020-10-15', '2025-10-14']\n",
-      "interval update: date_range=['2025-01-01', '2025-10-14']\n",
-      "interval update: date_range=['2022-10-15', '2025-10-14']\n",
-      "interval update: date_range=['2023-10-15', '2025-10-14']\n"
-     ]
     }
    ],
    "source": [
