change axes and colors

--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1223e6960>"
+       "<IPython.lib.display.IFrame at 0x13f63e960>"
       ]
      },
      "metadata": {},
