finally fix ticker ordering

--- a/app.ipynb
+++ b/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [
@@ -33,11 +33,22 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11d4d3e60>"
+       "<IPython.lib.display.IFrame at 0x134058170>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tickers update: None\n",
+      "tickers update: QQQ, SPY, VTI, VT\n",
+      "tickers update: QQQ, SPY, VTI, VT\n",
+      "tickers update: QQQ, SPY, VTI, VT\n",
+      "tickers update: QQQ, SPY, VTI, VT\n"
+     ]
     }
    ],
    "source": [
