--- a/app.ipynb
+++ b/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x134058170>"
+       "<IPython.lib.display.IFrame at 0x1680fba40>"
       ]
      },
      "metadata": {},
@@ -44,10 +44,7 @@
      "output_type": "stream",
      "text": [
       "tickers update: None\n",
-      "tickers update: QQQ, SPY, VTI, VT\n",
-      "tickers update: QQQ, SPY, VTI, VT\n",
-      "tickers update: QQQ, SPY, VTI, VT\n",
-      "tickers update: QQQ, SPY, VTI, VT\n"
+      "tickers update: QQQ, SPY, VTI, VT, F, AAPL, MSFT, META, GOOG, QCOM\n"
      ]
     }
    ],
