restore initial tickers

--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1680fba40>"
+       "<IPython.lib.display.IFrame at 0x125ba1f70>"
       ]
      },
      "metadata": {},
@@ -44,7 +44,7 @@
      "output_type": "stream",
      "text": [
       "tickers update: None\n",
-      "tickers update: QQQ, SPY, VTI, VT, F, AAPL, MSFT, META, GOOG, QCOM\n"
+      "tickers update: QQQ, SPY, VTI, VT\n"
      ]
     }
    ],
