add dividend and yield

--- a/app.ipynb
+++ b/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x125ba1f70>"
+       "<IPython.lib.display.IFrame at 0x1680a39b0>"
       ]
      },
      "metadata": {},
@@ -44,6 +44,7 @@
      "output_type": "stream",
      "text": [
       "tickers update: None\n",
+      "tickers update: QQQ, SPY, VTI, VT\n",
       "tickers update: QQQ, SPY, VTI, VT\n"
      ]
     }
