fixed ticker ordering, again

--- a/app.ipynb
+++ b/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [
@@ -33,20 +33,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1680a39b0>"
+       "<IPython.lib.display.IFrame at 0x11f0d4230>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tickers update: None\n",
-      "tickers update: QQQ, SPY, VTI, VT\n",
-      "tickers update: QQQ, SPY, VTI, VT\n"
-     ]
     }
    ],
    "source": [
