add type hinting

--- a/app.ipynb
+++ b/app.ipynb
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11f0d4230>"
+       "<IPython.lib.display.IFrame at 0x1246f4710>"
       ]
      },
      "metadata": {},
